# SLAI-T-Rex

./: .gitignore  LICENSE  README.md  README_en.md  README_zh.md
cpt_data_construction/: README.md
cpt_training/: README.md
cpt_training/scripts/: convert_ckpt_hf_to_mcore.sh  train_cpt_deepseek4_flash_4k.sh
docs/: README.md
examples/: README.md
model_download_deployment/: README.md
model_download_deployment/scripts/: convert_ckpt_fp8_to_bf16.sh
or_benchmark_eval/: README.md  requirements.txt
or_benchmark_eval/evaluate/: _lp_utils.py  evaluate_code.py  python_executor.py
or_benchmark_eval/scripts/: launch_eval.sh  run_eval.py  run_eval.sh  run_eval_1pass.sh  run_eval_5shot.sh  run_eval_acc16.sh  run_eval_acc4.sh
sft_data_construction/: .gitignore  README.md  pyproject.toml  requirements.txt
sft_data_construction/configs/: answer_styles.example.yaml  bucket_profile.example.yaml  run.example.yaml  schema.example.yaml
sft_data_construction/examples/configs/: demo.yaml
sft_data_construction/examples/seeds/: small_seed.jsonl
sft_data_construction/prompts/: extract_generic_ir.txt  generate_synthetic_ir.txt  render_answer.txt  render_problem.txt
sft_data_construction/seeds/: public_seed.jsonl  public_seed_manifest.json
sft_data_construction/src/or_data_distill/: __init__.py  cli.py  generic_ir.py  io_utils.py  ir_schema.py  llm_client.py  pipeline.py  quality_gate.py  seed_sanitizer.py
sft_data_construction/tools/: build_public_seed_subset.py  inspect_run.py  run_background.sh
sft_training/: README.md
sft_training/scripts/: convert_data.sh  (+3 more)
(+582 files in other folders)
