[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "or-data-distill"
version = "0.1.0"
description = "A generic data distillation framework for optimization modeling SFT data."
requires-python = ">=3.10"
dependencies = [
  "pyyaml>=6.0",
  "requests>=2.31",
]

[tool.setuptools.packages.find]
where = ["src"]

